# engine

./: .gitignore  CMakeLists.txt  readme.md
scripts/: entities.lua  player.lua  rat.lua  shoggoth.lua  test.lua  wolf.lua
src/: Api.cpp  Api.h  Entity.cpp  Entity.h  engine.h  main.cpp
